// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Object {
  "add|ZRX-WETH|0xOrderHash": Object {
    "liveOrder": Object {
      "test": "liveOrder",
    },
    "method": "add",
    "pair": "ZRX-WETH",
    "signedOrder": Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
    "timeout": 19,
    "ws": Object {},
  },
}
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    "add",
    "ZRX-WETH",
    "0xOrderHash",
  ],
]
`;

exports[`handleAddOrderRequest 3`] = `
Array [
  Array [
    Object {},
    Object {
      "status": "pending",
      "test": "liveOrder",
      "type": "add",
      "updatedBy": "user",
    },
    "add",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleCancelOrderRequest 1`] = `
Object {
  "cancel|ZRX-WETH|0xOrderHash": Object {
    "liveOrder": Object {
      "test": "liveOrder",
    },
    "method": "cancel",
    "pair": "ZRX-WETH",
    "timeout": 24,
    "ws": Object {},
  },
}
`;

exports[`handleCancelOrderRequest 2`] = `
Array [
  Array [
    "cancel",
    "ZRX-WETH",
    "0xOrderHash",
  ],
]
`;

exports[`handleCancelOrderRequest 3`] = `
Array [
  Array [
    Object {},
    Object {
      "status": "pending",
      "test": "liveOrder",
      "type": "cancel",
      "updatedBy": "user",
    },
    "cancel",
  ],
]
`;

exports[`handleCancelOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "cancel",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleInvalidOrderRequest 1`] = `
Array [
  Array [
    "{\\"method\\":\\"add\\",\\"channel\\":\\"orders\\",\\"status\\":\\"invalid order\\",\\"pair\\":\\"ZRX-WETH\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleOrderRequest cancel 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "cancel",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"test\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"test\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"status\\":\\"service not available\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"0xOrderHash\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
]
`;

exports[`handleRelayerMessage invalid requests 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"\\",\\"method\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"channel\\",\\"method\\":\\"method\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"method\\",\\"pair\\":\\"test\\"}",
  ],
]
`;

exports[`handleRelayerMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleSequenceMessage add 1`] = `
Array [
  Array [
    undefined,
    Object {
      "currentSequence": 1,
      "initialSequence": 1,
      "orderHash": "orderHash",
      "status": "confirmed",
      "type": "add",
      "updatedBy": "relayer",
    },
    "add",
  ],
]
`;

exports[`handleSequenceMessage add failed 1`] = `
Object {
  "add|pair|orderHash": Object {
    "liveOrder": Object {
      "currentSequence": 1,
      "initialSequence": 1,
      "orderHash": "orderHash",
    },
  },
}
`;

exports[`handleSequenceMessage cancel 1`] = `
Array [
  Array [
    undefined,
    Object {
      "currentSequence": 2,
      "orderHash": "orderHash",
      "status": "confirmed",
      "type": "cancel",
      "updatedBy": "relayer",
    },
    "cancel",
  ],
]
`;

exports[`handleSequenceMessage cancel failed 1`] = `
Object {
  "cancel|pair|orderHash": Object {
    "liveOrder": Object {
      "currentSequence": 2,
      "orderHash": "orderHash",
    },
  },
}
`;

exports[`handleUserOrder 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\"}}",
  ],
]
`;
